--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p class="a2 border"><a style="color: white; text-decoration: none;" href="#shop1">Shop</a></p>
                 <p class="a3 border">Registery</p>
                 <p class="a4 border">Gift cards</p>
-                <p class="a5 border">Sell</p>
+                <p class="a5 border"><a style="color: white; text-decoration: none;" href="#shop1">Login</a></p>
             </div>
             <div class="deals"><i class="fa-solid fa-bars"></i>  All</div>
         </div>
